--- a/index.html
+++ b/index.html
@@ -2,120 +2,53 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OSSO Katalog</title>
+  <title>OSSO Flipbook</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      text-align: center;
-      margin: 0;
+      background: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-family: sans-serif;
       padding: 40px 20px;
     }
-    .flipbook-container {
-      max-width: 800px;
+    #flipbook {
+      width: 800px;
+      height: 500px;
       margin: auto;
-      position: relative;
     }
-    .page-img {
-      width: 100%;
-      display: none;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    .page-img.active {
-      display: block;
-    }
-    .nav-buttons {
-      margin-top: 20px;
-    }
-    .nav-buttons button {
-      padding: 10px 20px;
-      margin: 0 10px;
-      font-size: 16px;
-      background: #305184;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .nav-buttons button:disabled {
-      background: #ccc;
-      cursor: not-allowed;
+    .page {
+      background-color: white;
+      background-size: cover;
+      background-position: center;
     }
   </style>
 </head>
 <body>
 
-  <h1>OSSO Katalog</h1>
-
-  <div class="flipbook-container">
-    <img src="images/1.jpg" class="page-img active">
-    <img src="images/2.jpg" class="page-img">
-    <img src="images/3.jpg" class="page-img">
-    <img src="images/4.jpg" class="page-img">
-    <img src="images/5.jpg" class="page-img">
-    <img src="images/6.jpg" class="page-img">
-    <img src="images/7.jpg" class="page-img">
-    <img src="images/8.jpg" class="page-img">
-    <img src="images/9.jpg" class="page-img">
-    <img src="images/10.jpg" class="page-img">
-    <img src="images/11.jpg" class="page-img">
-    <img src="images/12.jpg" class="page-img">
-    <img src="images/13.jpg" class="page-img">
-    <img src="images/14.jpg" class="page-img">
-    <img src="images/15.jpg" class="page-img">
-    <img src="images/16.jpg" class="page-img">
-    <img src="images/17.jpg" class="page-img">
-    <img src="images/18.jpg" class="page-img">
-    <img src="images/19.jpg" class="page-img">
-    <img src="images/20.jpg" class="page-img">
-    <img src="images/21.jpg" class="page-img">
-    <img src="images/22.jpg" class="page-img">
-    <img src="images/23.jpg" class="page-img">
-    <img src="images/24.jpg" class="page-img">
-    <img src="images/25.jpg" class="page-img">
-    <img src="images/26.jpg" class="page-img">
-    <img src="images/27.jpg" class="page-img">
-    <img src="images/28.jpg" class="page-img">
-  </div>
-
-  <div class="nav-buttons">
-    <button onclick="prevPage()" id="prevBtn">◀ Önceki</button>
-    <button onclick="nextPage()" id="nextBtn">Sonraki ▶</button>
-  </div>
+  <h1>📘 OSSO Katalog</h1>
+  <div id="flipbook"></div>
 
   <script>
-    const pages = document.querySelectorAll('.page-img');
-    let current = 0;
+    const totalPages = 28; // toplam sayfa adedini yaz
+    const flipbook = document.getElementById("flipbook");
 
-    function updateButtons() {
-      document.getElementById('prevBtn').disabled = current === 0;
-      document.getElementById('nextBtn').disabled = current === pages.length - 1;
+    for (let i = 1; i <= totalPages; i++) {
+      const page = document.createElement("div");
+      page.className = "page";
+      page.style.backgroundImage = `url('images/${i}.jpg')`;
+      page.style.width = "400px";
+      page.style.height = "500px";
+      flipbook.appendChild(page);
     }
 
-    function showPage(index) {
-      pages.forEach((page, i) => {
-        page.classList.toggle('active', i === index);
-      });
-      updateButtons();
-    }
-
-    function nextPage() {
-      if (current < pages.length - 1) {
-        current++;
-        showPage(current);
-      }
-    }
-
-    function prevPage() {
-      if (current > 0) {
-        current--;
-        showPage(current);
-      }
-    }
-
-    updateButtons();
+    $('#flipbook').turn({
+      width: 800,
+      height: 500,
+      autoCenter: true
+    });
   </script>
 
 </body>
